--- a/galeria-fotos.html
+++ b/galeria-fotos.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=AW-17693491481"
@@ -15,12 +16,13 @@
       gtag("js", new Date());
 
       gtag("config", "AW-17693491481");
-
       gtag("config", "G-XPLS30LR38");
     </script>
+
     <title data-translate-key="photoGalleryTitle">
       Galeria de Fotos - DronyImagem
     </title>
+
     <link rel="stylesheet" href="css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap"
@@ -33,7 +35,9 @@
       body {
         background-color: var(--darker-bg);
         color: var(--text-color);
+        margin: 0;
       }
+
       .simple-header {
         background-color: var(--dark-bg);
         padding: 15px 0;
@@ -46,6 +50,8 @@
         max-width: 1200px;
         margin: 0 auto;
         padding: 0 20px;
+        flex-wrap: wrap;
+        gap: 15px;
       }
       .simple-logo a {
         font-size: 1.5rem;
@@ -53,15 +59,11 @@
         color: var(--text-color);
         text-decoration: none;
       }
-
-      /* NOVO ESTILO: Container para alinhar seletor e link */
       .header-right-controls {
         display: flex;
         align-items: center;
         gap: 20px;
       }
-
-      /* NOVO ESTILO: Seletor de Idioma */
       .language-selector a {
         font-size: 0.9rem;
         font-weight: 600;
@@ -69,44 +71,220 @@
         padding: 0 5px;
         transition: color 0.3s;
         white-space: nowrap;
+        text-decoration: none;
       }
-
       .language-selector a:hover,
       .language-selector a.lang-active {
         color: var(--text-color);
       }
-
       .back-link a {
         color: var(--accent-color);
         text-decoration: none;
         font-weight: 600;
       }
+
+      @media (max-width: 768px) {
+        .simple-header .container {
+          justify-content: center;
+          flex-direction: column;
+        }
+        .header-right-controls {
+          width: 100%;
+          justify-content: space-between;
+          font-size: 0.9rem;
+        }
+      }
+
       .page-content {
-        padding: 60px 0;
+        padding: 40px 0 60px;
       }
       .page-content .container {
-        max-width: 800px;
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 0 20px;
       }
       .page-content h1 {
-        font-size: 2.8rem;
+        font-size: 2.5rem;
         font-weight: 800;
-        margin-bottom: 15px;
+        margin-bottom: 10px;
         text-align: center;
-        line-height: 1.2;
         color: var(--accent-color);
       }
       .page-content .subtitle {
-        font-size: 1.2rem;
+        font-size: 1.1rem;
         color: #ccc;
         text-align: center;
         margin-bottom: 40px;
         font-style: italic;
       }
-      .page-content .placeholder {
-        font-size: 1.1rem;
+
+      .gallery-topic-title {
+        font-size: 1.5rem;
+        font-weight: 700;
+        color: #fff;
+        margin-top: 50px;
+        margin-bottom: 20px;
+        text-align: left;
+        border-bottom: 1px solid var(--accent-color);
+        padding-bottom: 10px;
+      }
+      .gallery-topic-title:first-of-type {
+        margin-top: 10px;
+      }
+
+      .gallery-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+        gap: 15px;
+      }
+
+      @media (max-width: 480px) {
+        .gallery-grid {
+          grid-template-columns: 1fr;
+          gap: 15px;
+        }
+        .page-content h1 {
+          font-size: 2rem;
+        }
+      }
+
+      .gallery-item {
+        position: relative;
+        overflow: hidden;
+        border-radius: 8px;
+        border: 1px solid #333;
+        background-color: #111;
+        aspect-ratio: 4/3;
+        transition: transform 0.3s ease, border-color 0.3s ease;
+        cursor: pointer;
+      }
+
+      .gallery-item:hover {
+        transform: translateY(-5px);
+        border-color: var(--accent-color);
+      }
+
+      .gallery-item img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        display: block;
+        transition: transform 0.5s ease;
+      }
+      .gallery-item:hover img {
+        transform: scale(1.05);
+      }
+
+      .modal {
+        display: none;
+        position: fixed;
+        z-index: 9999;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.95);
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+      }
+
+      .modal.active {
+        display: flex;
+        animation: fadeIn 0.3s;
+      }
+
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+        }
+        to {
+          opacity: 1;
+        }
+      }
+
+      .modal-content-wrapper {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 20px;
+      }
+
+      .modal-img {
+        max-width: 100%;
+        max-height: 80vh;
+        border-radius: 4px;
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+        object-fit: contain;
+        user-select: none;
+      }
+
+      .close-btn {
+        position: absolute;
+        top: 15px;
+        right: 25px;
+        color: #f1f1f1;
+        font-size: 40px;
+        font-weight: bold;
+        transition: 0.3s;
+        cursor: pointer;
+        z-index: 10002;
+        line-height: 1;
+        background: rgba(0, 0, 0, 0.5);
+        width: 40px;
+        height: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50%;
+      }
+
+      .nav-btn {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        background-color: rgba(0, 0, 0, 0.4);
+        color: white;
+        border: none;
+        font-size: 2rem;
+        padding: 0;
+        cursor: pointer;
+        transition: background-color 0.3s;
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 10001;
+      }
+
+      .nav-btn:hover {
+        background-color: var(--accent-color);
+        color: #000;
+      }
+
+      .prev {
+        left: 20px;
+      }
+      .next {
+        right: 20px;
+      }
+
+      @media (max-width: 768px) {
+        .nav-btn {
+          display: none !important;
+        }
+      }
+
+      .image-counter {
         color: #ccc;
-        line-height: 1.8;
-        text-align: center;
+        margin-bottom: 20px;
+        font-size: 1rem;
+        font-family: "Montserrat", sans-serif;
       }
     </style>
   </head>
@@ -126,7 +304,7 @@
           </div>
           <div class="back-link">
             <a href="index.html#portifolio" data-translate-key="backToPortfolio"
-              >← Voltar ao Portfólio</a
+              >← Voltar</a
             >
           </div>
         </div>
@@ -139,12 +317,90 @@
         <p class="subtitle" data-translate-key="photoGallerySubtitle">
           Projetos e momentos incríveis capturados por nossas lentes.
         </p>
-        <p class="placeholder" data-translate-key="galleryPlaceholder">
-          Nossa galeria de fotos está sendo atualizada. Volte em breve!
-        </p>
+
+        <h2 class="gallery-topic-title" data-translate-key="gallerySunsetTitle">
+          Pôr do Sol em Cuiabá
+        </h2>
+        <div class="gallery-grid" id="grid-pordosol">
+          <div class="gallery-item">
+            <img
+              src="https://i.imgur.com/yuXYEkH.jpg"
+              alt="Pôr do Sol Cuiabá"
+              data-translate-key="altSunset"
+              loading="lazy"
+            />
+          </div>
+          <div class="gallery-item">
+            <img
+              src="https://i.imgur.com/MOL414L.jpg"
+              alt="Pôr do Sol Cuiabá"
+              data-translate-key="altSunset"
+              loading="lazy"
+            />
+          </div>
+          <div class="gallery-item">
+            <img
+              src="https://i.imgur.com/Xla18P8.jpg"
+              alt="Pôr do Sol Cuiabá"
+              data-translate-key="altSunset"
+              loading="lazy"
+            />
+          </div>
+          <div class="gallery-item">
+            <img
+              src="https://i.imgur.com/3oXZ9up.jpg"
+              alt="Pôr do Sol Cuiabá"
+              data-translate-key="altSunset"
+              loading="lazy"
+            />
+          </div>
+          <div class="gallery-item">
+            <img
+              src="https://i.imgur.com/OndnOuQ.jpg"
+              alt="Pôr do Sol Cuiabá"
+              data-translate-key="altSunset"
+              loading="lazy"
+            />
+          </div>
+          <div class="gallery-item">
+            <img
+              src="https://i.imgur.com/12zNnXp.jpg"
+              alt="Pôr do Sol Cuiabá"
+              data-translate-key="altSunset"
+              loading="lazy"
+            />
+          </div>
+        </div>
+
+        <h2 class="gallery-topic-title" data-translate-key="galleryResortTitle">
+          Resort de Luxo em Mato Grosso
+        </h2>
+        <div class="gallery-grid" id="grid-resort">
+          <div class="gallery-item">
+            <img
+              src="https://i.imgur.com/zlUK7Zb.jpg"
+              alt="Resort de Luxo MT"
+              data-translate-key="altResort"
+              loading="lazy"
+            />
+          </div>
+        </div>
       </div>
     </main>
 
+    <div id="imageModal" class="modal">
+      <span class="close-btn">&times;</span>
+
+      <button class="nav-btn prev">&#10094;</button>
+      <button class="nav-btn next">&#10095;</button>
+
+      <div class="modal-content-wrapper">
+        <img class="modal-img" id="modalImage" src="" alt="Imagem Ampliada" />
+      </div>
+      <div class="image-counter" id="imageCounter"></div>
+    </div>
+
     <script src="script.js"></script>
+    <script src="js/gallery-modal.js"></script>
   </body>
 </html>
