--- a/galeria-videos.html
+++ b/galeria-videos.html
@@ -466,7 +466,7 @@
           </div>
 
           <div class="enterprise-group">
-            <h3 class="enterprise-title">Exemplo Empresa A</h3>
+            <h3 class="enterprise-title">Spin Dargo</h3>
             <div class="video-wrapper">
               <iframe
                 src="https://www.youtube.com/embed/a5HMyLuj_Cc"
@@ -495,7 +495,7 @@
           </div>
 
           <div class="enterprise-group">
-            <h3 class="enterprise-title">Imobiliária Exemplo</h3>
+            <h3 class="enterprise-title">Belvedere II</h3>
             <div class="video-wrapper">
               <iframe
                 src="https://www.youtube.com/embed/-T541ZVwkWk"
@@ -524,7 +524,9 @@
           </div>
 
           <div class="enterprise-group">
-            <h3 class="enterprise-title">Cuiabá e Região</h3>
+            <h3 class="enterprise-title">
+              Ponte Sérgio Motta - Cuiabá, Mato Grosso
+            </h3>
             <div class="video-wrapper">
               <iframe
                 src="https://www.youtube.com/embed/O_VP6VHp9KU"
