feat: Implement dynamic loading for photo and video galleries with modal support

--- a/galeria-fotos.html
+++ b/galeria-fotos.html
@@ -175,6 +175,7 @@
         transform: scale(1.05);
       }
 
+      /* Estilos do Modal */
       .modal {
         display: none;
         position: fixed;
@@ -321,70 +322,12 @@
         <h2 class="gallery-topic-title" data-translate-key="gallerySunsetTitle">
           Pôr do Sol em Cuiabá
         </h2>
-        <div class="gallery-grid" id="grid-pordosol">
-          <div class="gallery-item">
-            <img
-              src="https://i.imgur.com/yuXYEkH.jpg"
-              alt="Pôr do Sol Cuiabá"
-              data-translate-key="altSunset"
-              loading="lazy"
-            />
-          </div>
-          <div class="gallery-item">
-            <img
-              src="https://i.imgur.com/MOL414L.jpg"
-              alt="Pôr do Sol Cuiabá"
-              data-translate-key="altSunset"
-              loading="lazy"
-            />
-          </div>
-          <div class="gallery-item">
-            <img
-              src="https://i.imgur.com/Xla18P8.jpg"
-              alt="Pôr do Sol Cuiabá"
-              data-translate-key="altSunset"
-              loading="lazy"
-            />
-          </div>
-          <div class="gallery-item">
-            <img
-              src="https://i.imgur.com/3oXZ9up.jpg"
-              alt="Pôr do Sol Cuiabá"
-              data-translate-key="altSunset"
-              loading="lazy"
-            />
-          </div>
-          <div class="gallery-item">
-            <img
-              src="https://i.imgur.com/OndnOuQ.jpg"
-              alt="Pôr do Sol Cuiabá"
-              data-translate-key="altSunset"
-              loading="lazy"
-            />
-          </div>
-          <div class="gallery-item">
-            <img
-              src="https://i.imgur.com/12zNnXp.jpg"
-              alt="Pôr do Sol Cuiabá"
-              data-translate-key="altSunset"
-              loading="lazy"
-            />
-          </div>
-        </div>
+        <div class="gallery-grid" id="grid-pordosol"></div>
 
         <h2 class="gallery-topic-title" data-translate-key="galleryResortTitle">
           Resort de Luxo em Mato Grosso
         </h2>
-        <div class="gallery-grid" id="grid-resort">
-          <div class="gallery-item">
-            <img
-              src="https://i.imgur.com/zlUK7Zb.jpg"
-              alt="Resort de Luxo MT"
-              data-translate-key="altResort"
-              loading="lazy"
-            />
-          </div>
-        </div>
+        <div class="gallery-grid" id="grid-resort"></div>
       </div>
     </main>
 
@@ -401,6 +344,9 @@
     </div>
 
     <script src="script.js"></script>
+
+    <script src="js/gallery-loader.js"></script>
+
     <script src="js/gallery-modal.js"></script>
   </body>
 </html>
