--- a/galeria-videos.html
+++ b/galeria-videos.html
@@ -464,17 +464,6 @@
               Estabelecimentos Comerciais
             </h2>
           </div>
-
-          <div class="enterprise-group">
-            <h3 class="enterprise-title">Spin Dargo</h3>
-            <div class="video-wrapper">
-              <iframe
-                src="https://www.youtube.com/embed/a5HMyLuj_Cc"
-                title="YouTube video player"
-                allowfullscreen
-              ></iframe>
-            </div>
-          </div>
         </div>
 
         <div id="folder-realestate" class="directory-content">
@@ -492,17 +481,6 @@
             >
               Imobiliárias
             </h2>
-          </div>
-
-          <div class="enterprise-group">
-            <h3 class="enterprise-title">Belvedere II</h3>
-            <div class="video-wrapper">
-              <iframe
-                src="https://www.youtube.com/embed/-T541ZVwkWk"
-                title="YouTube video player"
-                allowfullscreen
-              ></iframe>
-            </div>
           </div>
         </div>
 
@@ -522,24 +500,12 @@
               Cartões Postais
             </h2>
           </div>
-
-          <div class="enterprise-group">
-            <h3 class="enterprise-title">
-              Ponte Sérgio Motta - Cuiabá, Mato Grosso
-            </h3>
-            <div class="video-wrapper">
-              <iframe
-                src="https://www.youtube.com/embed/O_VP6VHp9KU"
-                title="YouTube video player"
-                allowfullscreen
-              ></iframe>
-            </div>
-          </div>
         </div>
       </div>
     </main>
 
     <script src="script.js"></script>
     <script src="js/gallery-folders.js"></script>
+    <script src="js/gallery-loader.js"></script>
   </body>
 </html>
