feat: Add Netlify identity widget script to HTML files

--- a/admin/index.html
+++ b/admin/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gerenciador de Conteúdo - DronyImagem</title>
+    <title>Gerenciador - DronyImagem</title>
+
+    <link rel="icon" type="image/x-icon" href="../favicon.ico" />
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
+
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
     <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
     <script src="https://unpkg.com/netlify-cms-widget-youtube@^0.0.3/dist/main.js"></script>
   </head>
