--- a/admin/index.html
+++ b/admin/index.html
@@ -6,12 +6,22 @@
     <title>Gerenciador - DronyImagem</title>
 
     <link rel="icon" type="image/x-icon" href="../favicon.ico" />
-    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
 
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-
-    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
-    <script src="https://unpkg.com/netlify-cms-widget-youtube@^0.0.3/dist/main.js"></script>
   </head>
-  <body></body>
+  <body>
+    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+
+    <script>
+      if (window.netlifyIdentity) {
+        window.netlifyIdentity.on("init", (user) => {
+          if (!user) {
+            window.netlifyIdentity.on("login", () => {
+              document.location.href = "/admin/";
+            });
+          }
+        });
+      }
+    </script>
+  </body>
 </html>
