feat: Update folder opening logic to include translation support for breadcrumbs

--- a/galeria-videos.html
+++ b/galeria-videos.html
@@ -368,7 +368,7 @@
         <div id="folders-root" class="folders-grid">
           <div
             class="folder-card"
-            onclick="openFolder('folder-commercial', 'Estabelecimentos Comerciais')"
+            onclick="openFolder('folder-commercial', 'videoTopicCommercial')"
             style="
               background-image: url('https://img.youtube.com/vi/a5HMyLuj_Cc/maxresdefault.jpg');
             "
@@ -395,7 +395,7 @@
 
           <div
             class="folder-card"
-            onclick="openFolder('folder-realestate', 'Imobiliárias')"
+            onclick="openFolder('folder-realestate', 'videoTopicRealEstate')"
             style="
               background-image: url('https://img.youtube.com/vi/-T541ZVwkWk/maxresdefault.jpg');
             "
@@ -422,7 +422,7 @@
 
           <div
             class="folder-card"
-            onclick="openFolder('folder-postcards', 'Cartões Postais')"
+            onclick="openFolder('folder-postcards', 'videoTopicPostalCards')"
             style="
               background-image: url('https://img.youtube.com/vi/O_VP6VHp9KU/maxresdefault.jpg');
             "
